--- a/application/index/view/equipment_maintain/add-maintain-info.html
+++ b/application/index/view/equipment_maintain/add-maintain-info.html
@@ -9,31 +9,31 @@
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">日期</label>
+            <label class="layui-form-label">故障日期</label>
             <div class="layui-input-inline">
-                <input type="date" class="layui-input" name="date">
+                <input type="text" name="date" id="date" lay-verify="date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">行为</label>
+            <label class="layui-form-label">故障现象</label>
             <div class="layui-input-block">
                 <input type="text" class="layui-input" name="action">
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">理由</label>
+            <label class="layui-form-label">原因分析</label>
             <div class="layui-input-block">
                 <input type="text" class="layui-input" name="reason">
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">方法</label>
+            <label class="layui-form-label">维修方法</label>
             <div class="layui-input-block">
                 <input type="text" class="layui-input" name="function">
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">效果跟踪</label>
+            <label class="layui-form-label">后期效果跟踪</label>
             <div class="layui-input-block">
                 <input type="text" class="layui-input" name="track">
             </div>
@@ -51,6 +51,18 @@
             </div>
         </div>
         <div class="layui-form-item">
+            <label class="layui-form-label">经办人</label>
+            <div class="layui-input-inline">
+                <input type="text" class="layui-input" name="agent" value="{$Think.session.user.user_name}" title="禁止修改" disabled>
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">备注</label>
+            <div class="layui-input-block">
+                <input type="text" class="layui-input" name="remarks">
+            </div>
+        </div>
+        <div class="layui-form-item">
             <label class="layui-form-label"></label>
             <button class="layui-btn" lay-submit lay-filter="addId" >
                 确认添加
@@ -60,6 +72,14 @@
 </div>
 </body>
 <script>
+    //日期
+    layui.use('laydate', function(){
+        var laydate = layui.laydate;
+        //执行一个laydate实例
+        laydate.render({
+            elem: '#date' //指定元素
+        });
+    });
     layui.use(['form'], function(){
         $ = layui.jquery;
         var form = layui.form,layer = layui.layer;
