--- a/application/index/view/equipment_repair/add-repair-info.html
+++ b/application/index/view/equipment_repair/add-repair-info.html
@@ -11,7 +11,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">保养计划</label>
             <div class="layui-input-inline">
-                <input type="date" class="layui-input" name="maintenance_plan_date">
+                <input type="text" name="maintenance_plan_date" id="maintenance_plan_date" lay-verify="date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
@@ -27,9 +27,27 @@
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">核对日期</label>
+            <label class="layui-form-label">检查日期</label>
             <div class="layui-input-block">
-                <input type="date" class="layui-input" name="check_date">
+                <input type="text" name="check_date" id="check_date" lay-verify="date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">负责人</label>
+            <div class="layui-input-block">
+                <input type="text" name="person" class="layui-input">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">检查人</label>
+            <div class="layui-input-block">
+                <input type="text" name="inspector" class="layui-input">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">备注</label>
+            <div class="layui-input-block">
+                <input type="text" name="remarks" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
@@ -42,6 +60,17 @@
 </div>
 </body>
 <script>
+    //日期
+    layui.use('laydate', function(){
+        var laydate = layui.laydate;
+        //执行一个laydate实例
+        laydate.render({
+            elem: '#check_date' //指定元素
+        });
+        laydate.render({
+            elem: '#maintenance_plan_date' //指定元素
+        });
+    });
     layui.use(['form'], function(){
         $ = layui.jquery;
         var form = layui.form,layer = layui.layer;
