--- a/application/index/view/equipment/equipmentInfo.html
+++ b/application/index/view/equipment/equipmentInfo.html
@@ -13,8 +13,8 @@
 </div>
 <div class="x-body">
     <xblock>
-        <button class="layui-btn" onclick="x_admin_show('添加设备','{:url(\'index/Equipment/addEquipmentInfo\')}',500,800)"><i class="layui-icon"></i>添加设备</button>
-        <button class="layui-btn"  onclick="openLinke()">所有记录</button>
+        <button class="layui-btn" onclick="x_admin_show('添加设备','{:url(\'index/Equipment/addEquipmentInfo\')}')"><i class="layui-icon"></i>添加设备</button>
+        <button class="layui-btn"  onclick="openLinke()">维修保养记录</button>
         <div class="layui-input-inline">
             <form class="layui-form" action="{:url('index/Equipment/equipmentInfo')}" method="post">
                 <div class="layui-input-inline">
@@ -48,6 +48,8 @@
                     <th>生产地</th>
                     <th>生产日期</th>
                     <th>购买日期</th>
+                    <th>购买价格</th>
+                    <th>当前价值</th>
                     <th>正在运行</th>
                     <th>卖出日期</th>
                     <th>使用者</th>
@@ -57,7 +59,7 @@
                 {volist name="$equipmentInfo" id="equipmentInfoList"}
                 <tr>
                     <td class="td-manage" width="50px;">
-                        <a title="编辑"onclick="x_admin_show('修改设备','{:url(\'index/Equipment/editEquipmentInfo\',[\'id\'=>$equipmentInfoList.id])}',500,800)" href="javascript:;">
+                        <a title="编辑"onclick="x_admin_show('修改设备','{:url(\'index/Equipment/editEquipmentInfo\',[\'id\'=>$equipmentInfoList.id])}')" href="javascript:;">
                             <i style="color: green" class="layui-icon"></i>
                         </a>
                         <a title="删除" onclick="delete_(this,'{$equipmentInfoList.id}')" href="javascript:;">
@@ -77,6 +79,8 @@
                     <td>{$equipmentInfoList.manufacturer}</td>
                     <td>{$equipmentInfoList.manufacture_date}</td>
                     <td>{$equipmentInfoList.purchasing_date}</td>
+                    <td>{$equipmentInfoList.price}</td>
+                    <td>{$equipmentInfoList.current_price}</td>
                     <td> {$equipmentInfoList.is_working?'<span class="layui-badge layui-bg-green">是</span>':'<span class="layui-badge">否</span>'}  </td>
                     <td>{$equipmentInfoList.sell_date}</td>
                     <td>{$equipmentInfoList.user}</td>
